// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Descriptions demos > demo: Basic 1`] = `
"<div class="ant-descriptions">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!--v-if-->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">UserName</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Zhou Maomao</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Telephone</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">1810000000</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Live</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Hangzhou, Zhejiang</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Remark</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">empty</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Address</th>
          <td class="ant-descriptions-item-content" colspan="3">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner"> No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions demos > demo: Bordered 1`] = `
"<div class="ant-descriptions ant-descriptions-bordered">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!--v-if-->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Product</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Cloud Database</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Billing Mode</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Prepaid</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Automatic Renewal</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">YES</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Order time</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">2018-04-24 18:00:00</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Usage Time</th>
          <td class="ant-descriptions-item-content" colspan="3">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner"> 2019-04-24 18:00:00 </span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Status</th>
          <td class="ant-descriptions-item-content" colspan="5">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Running</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Negotiated Amount</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$80.00</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Discount</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$20.00</span>
          </td>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon">Official Receipts</th>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$60.00</span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions demos > demo: Size 1`] = `
"<div>
  <div style="margin-bottom: 16px;"><span style="margin-right: 8px;">Size:</span><label style="margin-right: 8px;"><input type="radio" value="default"> Default </label><label style="margin-right: 8px;"><input type="radio" value="middle"> Middle </label><label><input type="radio" value="small"> Small </label></div>
  <div class="ant-descriptions ant-descriptions-bordered">
    <div class="ant-descriptions-header">
      <div class="ant-descriptions-title">Custom Size</div>
      <!--v-if-->
    </div>
    <div class="ant-descriptions-view">
      <table>
        <tbody>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Product</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Cloud Database</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Billing</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Prepaid</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Time</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">18:00:00</span>
            </td>
          </tr>
          <tr class="ant-descriptions-row">
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Amount</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$80.00</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Discount</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$20.00</span>
            </td>
            <th class="ant-descriptions-item-label ant-descriptions-item-colon">Official</th>
            <td class="ant-descriptions-item-content" colspan="1">
              <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">$60.00</span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>"
`;

exports[`Descriptions demos > demo: Vertical 1`] = `
"<div class="ant-descriptions">
  <div class="ant-descriptions-header">
    <div class="ant-descriptions-title">User Info</div>
    <!--v-if-->
  </div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <!-- Vertical layout: label row then content row -->
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">UserName</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Telephone</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Live</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Zhou Maomao</span>
          </td>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">1810000000</span>
          </td>
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">Hangzhou, Zhejiang</span>
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="1">Remark</th>
          <th class="ant-descriptions-item-label ant-descriptions-item-colon" colspan="2">Address</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td class="ant-descriptions-item-content" colspan="1">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner">empty</span>
          </td>
          <td class="ant-descriptions-item-content" colspan="2">
            <!--
    DescriptionsItem is rendered by the parent Descriptions via <component :is="node" />.
    The parent handles the table cell layout; this component just renders its content.
  --><span class="ant-descriptions-item-content-inner"> No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;
